# cobranzas_v2

./: .env.example  .gitignore  README.md  Sql_BD_Cobranza.sql  historia_usuario.md  lectura.py  main.py  pyproject.toml  requirements.txt
Batch_Cobranzas/: detener_api.bat  ejecutar_robot_api.bat
docs/: BD_Cobranza.mmd  preventiva_arquitectura.mmd  preventiva_flujo_funcional.mmd  schema_base.sql
scripts/: ValidarFecha.py  _check_lista_0601.py  add_perfil_asesores.py  cargar_asesores.py  cargar_recblue.py  check_estado.py  check_sqlite.py  check_table.py  compare_cortes.py  debug_model.py  fix_ahsaldia_patron.py  fix_params.py  fix_pk_integer.py  fix_schema.py  init_sqlite.py  inspect_headers.py  limpiar_tablas.py  params_prueba.py  reducir_historico.py  simular_directo.py  simular_flujo.py  simular_junio_completo.py  test_lector_cadetacaco.py  ver_logs.py
src/cobranzas/: __init__.py
src/cobranzas/api/: __init__.py  app.py  schemas.py
src/cobranzas/jobs/: api_runner.py  cargar_staging_runner.py  cli.py  container.py  fin_mes_runner.py  init_db.py  lis_excel_runner.py  migrar_sqlite_schema.py  notificaciones_container.py  notificar_error.py  pipeline_runner.py  plantilla_asesores.py  plantilla_feriados.py  plantilla_notificaciones.py  runner.py  seguir_credito_runner.py  (+6 more)
src/notificaciones/: README.md  __init__.py
src/preventiva/: README.md  __init__.py
tests/: conftest.py
tests/unit/: test_notificaciones_api.py  test_notificaciones_api_client.py  test_notificaciones_plantilla_renderer.py  test_notificaciones_service.py  test_notificaciones_sql_adapter.py
(+224 files in other folders)
