[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobranzas-job"
version = "0.2.0"
description = "Cobranzas + Gestión Preventiva con arquitectura hexagonal"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "pyodbc>=4.0",
    "openpyxl>=3.1",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
cobranzas       = "cobranzas.jobs.cli:main"
preventiva      = "preventiva.jobs.cli:main"
notificaciones  = "notificaciones.jobs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cobranzas", "src/preventiva", "src/notificaciones"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["cobranzas", "preventiva", "notificaciones"]
